--- a/assets/sass/object/project/_p-footer.scss
+++ b/assets/sass/object/project/_p-footer.scss
@@ -68,7 +68,7 @@ p-footer
           border-radius: 2.5rem;
         }
         span {
-          color: inc.$color-blu2;
+          color: inc.$color-blu;
           font-weight: 700;
           width: 100%;
           height: 100%;
