--- a/assets/sass/inc/_i-setting.scss
+++ b/assets/sass/inc/_i-setting.scss
@@ -42,9 +42,13 @@ $color-blu4: #0F68B2;
 $color-light-blu: #ECF1FA;
 $color-yel: #FFEA00;
 $color-grn: #009EA7;
-$color-grn2: #009AB5;
+$color-grn2: #009AB5; //#009AB5
 $color-grn3: #ebf6f9;
 $color-grn4: #469ca5;
+$color-grn5: #e9f6f9;
+$color-grn6: #e9f5f9;
+$color-grn7: #e9f3f9;
+$color-grn8: #ebf2fa;
 $color-gry: #707070;
 $color-blk: #171717;
 
