--- a/assets/sass/layout/_l-body.scss
+++ b/assets/sass/layout/_l-body.scss
@@ -8,6 +8,7 @@ l-body
 //   overflow: hidden;
 // }
 .l-body {
+  //padding-top: var(--header-height);
   padding-top: 60px;
   @include inc.mq(vr) {
     padding-top: 100px;
