--- a/assets/sass/object/project/_p-home.scss
+++ b/assets/sass/object/project/_p-home.scss
@@ -127,6 +127,7 @@ p-home
         font-weight: 500;
         list-style: 1;
         display: block;
+        font-family: 'Hind', sans-serif;
       }
     }
     p {
@@ -175,6 +176,7 @@ p-home
           font-weight: 500;
           list-style: 1;
           display: block;
+          font-family: 'Hind', sans-serif;
         }
       }
     }
@@ -194,6 +196,7 @@ p-home
           font-weight: 500;
           list-style: 1;
           display: block;
+          font-family: 'Hind', sans-serif;
         }
       }
     }
@@ -243,6 +246,7 @@ p-home
           font-weight: 500;
           list-style: 1;
           display: block;
+          font-family: 'Hind', sans-serif;
         }
       }
       p {
