--- a/assets/sass/object/project/_p-environment.scss
+++ b/assets/sass/object/project/_p-environment.scss
@@ -5,24 +5,38 @@ p-environment
 -----------------------------------------------------*/
 .p-environment {
   &--state {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: block;
+    @include inc.mq(tabs) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
     figure {
-      width: 50%;
+      width: 100%;
+      margin-bottom: 24px;
+      @include inc.mq(tabs) {
+        width: 50%;
+        margin-bottom: 0;
+      }
       figcaption {
         display: inline;
         font-weight: 700;
       }
     }
     ul {
-      width: calc(50% - 2rem);
       margin: 0;
-      padding: 0 80px 0 0;
+      padding: 0;
       list-style-type: none;
+      width: 100%;
+      @include inc.mq(tabs) {
+        padding: 0 80px 0 0;
+        width: calc(50% - 2rem);
+      }
       li {
         list-style-type: none;
         position:relative;
+        margin-left: 0;
+        margin-right: 80px;
         margin-bottom: 1.2rem;
         &::after {
           content: "";
@@ -57,6 +71,45 @@ p-environment
             left:100%;
             top:100%;
             background: none;
+          }
+        }
+        &:nth-child(even) {
+          margin-left: 80px;
+          margin-right: 0px;
+          &::after {
+            right: auto;
+            left: -80px;
+            top: calc(50% - 30px);
+          }
+          span {
+            border-radius:10px 10px 10px 0;
+            &:after{
+              border-width: 0 0 12px 16px;
+              border-color: transparent transparent inc.$color-wht transparent;
+              left:-16px;
+            }
+          }
+        }
+        @include inc.mq(tabs) {
+          margin-left: 0;
+          margin-right: 0;
+          &:nth-child(even) {
+            margin-left: 0px;
+            margin-right: 0px;
+            &::after {
+              right: -80px;
+              left: auto;
+              top: calc(50% - 30px);
+            }
+            span {
+              border-radius:10px 10px 0 10px;
+              &:after{
+                content:'';
+                border-width: 12px 0 0px 16px;
+                border-color: transparent transparent transparent inc.$color-wht;
+                left:100%;
+              }
+            }
           }
         }
       }
